# HSE_EDU_AI_2026

./: README.md  pyproject.toml
task1/: README.md  cars_train_processed.csv
task1/models/: feature_names.pkl  ohe_encoder.pkl  ridge_model.pkl  scaler.pkl
