[project]
name = "hse-edu-ai-2026"
version = "0.1.0"
description = ""
authors = [
    {name = "Gordeev A.E."}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
